# murmur3-constexpr

./: .gitignore  Murmur3.hpp  README.md
Tests/: CMakeLists.txt  TestMurmur3.cpp
